Bug 490547 - Unlock button shows up when using security key to unlock
Summary: Unlock button shows up when using security key to unlock
Status: CLOSED FIXED
Alias: None
Product: kscreenlocker
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 6.1.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-07-20 09:14 UTC by Mufeed Ali
Modified: 2026-03-18 07:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mufeed Ali 2024-07-20 09:14:08 UTC
SUMMARY

There's a redundant Unlock button that comes up when using a U2F security key for unlocking the lock screen.

STEPS TO REPRODUCE
1. Configure pam-u2f for unlocking.
2. Lock the screen with Win+L or by suspend.
3. Attempt to unlock.
4. Click any key once to show password field. (This also probably shouldn't be required in the case of security keys? I'm not sure.)
5. This reveals the password field and text above it saying "Please touch the device."
6. Tap on the security key.
7. Now an Unlock button shows up instead of taking me straight to my workspace.

OBSERVED RESULT
Up to 6.1.3, the Unlock button was not present and it would take me to the workspace. But since 6.1.3, the unlock button is present, adding one more step.

EXPECTED RESULT
No Unlock button, just straight to desktop or workspace.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.9.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Stefan Becker 2024-07-29 12:39:24 UTC
I can confirm this bug: it appeared after upgrading to 6.1.3.

Maybe this is related to the fix for bug #485520 ?


Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.9.11-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 2 Bug Janitor Service 2024-07-29 13:28:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreenlocker/-/merge_requests/236
Comment 3 Zamundaaa 2024-07-29 13:33:47 UTC
Git commit 67e73634aa3d03717feb46ec16cdd63100e1145f by Xaver Hugl.
Committed on 29/07/2024 at 13:27.
Pushed by zamundaaa into branch 'master'.

greeter/pamauthenticators: also consider non-interactive info messages a "prompt"

That's what the QML code did before

M  +4    -0    greeter/pamauthenticators.cpp

https://invent.kde.org/plasma/kscreenlocker/-/commit/67e73634aa3d03717feb46ec16cdd63100e1145f
Comment 4 Zamundaaa 2024-07-29 13:36:06 UTC
Git commit b8fa6b49c5c4fb3452c9008dca53aa2b55991096 by Xaver Hugl.
Committed on 29/07/2024 at 13:33.
Pushed by zamundaaa into branch 'Plasma/6.1'.

greeter/pamauthenticators: also consider non-interactive info messages a "prompt"

That's what the QML code did before


(cherry picked from commit 67e73634aa3d03717feb46ec16cdd63100e1145f)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +4    -0    greeter/pamauthenticators.cpp

https://invent.kde.org/plasma/kscreenlocker/-/commit/b8fa6b49c5c4fb3452c9008dca53aa2b55991096
Comment 5 Stefan Becker 2024-08-16 15:23:16 UTC
I can confirm that this problem is fixed in KDE Plasma 6.1.4. Thanks!

Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.4-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 6 Jessica Franco 2026-03-18 07:53:10 UTC
This seems to have reappeared on (at least) 6.6.2: the "Please touch the FIDO authenticator." notification (sent from https://github.com/Yubico/pam-u2f/blob/main/util.c#L1260-L1261) does appear above the password field, which should mark the PAM module with hadPrompt, but the "U&nlock" button is shown anyway.

If this could be caused by a PAM misconfiguration it would be nice to know what could be the cause.

```
auth       sufficient     pam_u2f.so           authfile=/etc/u2f_mappings cue
auth       required     pam_unix.so          try_first_pass nullok
```