greeter/pamauthenticators: also consider non-interactive info messages a "prompt"

That's what the QML code did before

BUG: 490547


(cherry picked from commit 67e73634aa3d03717feb46ec16cdd63100e1145f)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>